# aiomql

./: .gitignore  README.md  example.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: push.yml
docs/: account.md  bot_builder.md  candle.md  config.md  constants.md  executor.md  history.md  market.md  meta_trader.md  models.md  order.md  positions.md  records.md  result.md  strategy.md  symbol.md  terminal.md  ticks.md  trader.md
src/aiomql/: __init__.py  account.py  bot_builder.py  candle.py  config.py  executor.py  history.py  market.py  order.py  positions.py  records.py  result.py  strategy.py  symbol.py  terminal.py  ticks.py  trader.py  utils.py
src/aiomql/core/: __init__.py  constants.py  meta_trader.py  models.py
src/aiomql/lib/markets/: forex_market.py  synthetic_market.py
src/aiomql/lib/strategies/: finger_trap.py
src/aiomql/lib/symbols/: forex_symbol.py  synthetic_symbol.py
src/aiomql/lib/traders/: simple_deal_trader.py
tests/: test_terminal.py
trade_records/: FingerTrap.csv
